# prompt_sail

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  conftest.py  docker-compose-build.yml  docker-compose-try-promptsail.yml  docker-compose.dev.yml  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  contributing-issue.md
.github/workflows/: docker-publish.yml  main.yml
FRONTEND/: .eslintrc.cjs  Dockerfile  README.md  package-lock.json  package.json
FRONTEND/src/: App.tsx  index.sass
backend/: .aider.conf.yml  Dockerfile  Dockerfile_v1  Dockerfile_v1.1  build.sh  compose.yml  provider_price_list.json  pyproject.toml  pytest.ini  test_transactions.csv  test_transactions_tokens_cost_speed.csv
backend/pentests/: README.md
backend/perf_tests/: README.md  locust.conf  locustfile.py
backend/perf_tests/results/: 1k_costs_transactions_20_users_report_1711718553.0900197.html  1k_count_transactions_20_users_report_1711718553.0900197.html  1k_speed_transactions_20_users_report_1711718553.0900197.html  5k_costs_transactions_20_users_report_1711718553.0900197.html  5k_count_transactions_20_users_report_1711718553.0900197.html  5k_speed_transactions_20_users_report_1711718553.0900197.html
backend/src/: .env.template  mailing.py  main.py  shell.py  utils.py
backend/src/app/: __init__.py  app.py  auth_web_api.py  db_logging.py  dependencies.py  exception_handlers.py  logging.py  messages.py  middleware.py  reverse_proxy.py  web_api.py  web_home.py  web_ui.py
backend/src/auth/: authorization.py  models.py  repositories.py  schemas.py  use_cases.py
backend/src/config/: __init__.py  containers.py
backend/src/config/data/: provider_price_list.json
backend/src/organization/: models.py  repositories.py  schemas.py  use_cases.py
backend/src/projects/: __init__.py  models.py  repositories.py  schemas.py  use_cases.py
backend/src/raw_transactions/: models.py  repositories.py  schemas.py  use_cases.py
backend/src/seedwork/: exceptions.py  repositories.py
backend/src/settings/: models.py  repositories.py  schemas.py  use_cases.py
backend/src/transactions/: __init__.py  event_handlers.py  models.py  repositories.py  schemas.py  use_cases.py
backend/src/user_credentials/: models.py  repositories.py  schemas.py  use_cases.py
backend/src/web/project/: index.html  package.json  tsconfig.json
backend/src/web/project/src/: App.vue
backend/src/web/templates/: base.html  dashboard.html  project-update-form.html
backend/tests/: conftest.py  test_api transactions.py  test_api.py  test_api_portfolio.py  test_api_projects.py  test_api_statistics_speed.py  test_api_statistics_transaction_cost.py  test_api_statistics_transaction_counts.py  test_count_statistics.py  test_count_statistics_refactored.py  test_pricing.py  test_speed_statistics.py  test_statistics.py  test_tokens_and_cost_statistics.py  test_transactions.py  test_transactions_pricing.py  test_transactions_statuses.py  test_utils.py  test_web_ui.py
backend/tests/fixtures/transactions/: test_transactions_pricing.csv
coding_prompts/: refactor_test.md
configs/ui/: .env.production
docs/: CNAME  Gemfile  Rakefile  _config.yml  index.md
docs/_data/: navigation.yml
docs/_docs/: 00-introduction.md  01-quick-start-guide.md  02-how-to-setup-llm-proxy-project.md  03-demo.md  10-Input-output-proxy.md  10-Storing transactions.md  100-todo.md  11-LLM integrations.md  11-supported-models.md  12-rest-api.md  13-gen-ai-api-integrations.md  20-Login-page.md  21-Organization-Dashboard.md  22-Project-Dashboard.md  23-Transations-view.md  31-development-environment.md  31-how-to-write-documentation.md  32-repository-structure.md  33-contributing.md  33-mongodb-schema.md  34-how-to-write-documentation.md  35-contributing.md  36-SSO-Configuration.md  41-license.md  42-contributors.md  50-deploy-cookbook-introduction.md  51-deploy-promptsail-local.md  52-deploy-promptsail-azure.md  53-deploy-promptsail-aws.md  54-deploy-promptsail-gcp.md  55-environment-variables.md
docs/_drafts/: post-draft.md
docs/_layouts/: default.html
docs/_pages/: 404.md  about.md  home.md
docs/_posts/: 2023-10-16-why-we-build-LLM-API-proxy.md  (+10 more)
examples/: .env.template  anthropic.ipynb  anthropic_sdk_claude.ipynb  awsboto3_bedrock.py  groq_sdk_groq.ipynb  langchain_anthropic.ipynb  langchain_awsbedrock_titan.ipynb  langchain_azure_oai_embeddings.ipynb  langchain_azure_openai.ipynb  langchain_google_vertexai.ipynb  langchain_hugginface_enpoints.py  langchain_huggingface_endpoints.ipynb  langchain_openai.ipynb  ollama.ipynb  openai_sdk.ipynb  openai_sdk_azure_dalle.ipynb  openai_sdk_azure_openai.ipynb  openai_sdk_oai_embeddings.ipynb  openai_sdk_oai_images.ipynb  openai_sdk_oai_multimodal.ipynb  openai_sdk_openai.ipynb  openai_sdk_openai.py  pyproject.toml  request_google_vertexai.ipynb  request_groq.ipynb  request_ollama.ipynb  toy_langchain.py  toy_openai.py
src/: .env.template  main.py  repository.py  tasks.py  tmp.py  toy.py  toy_langchain.py  toy_openai.py  utils.py
src/app/: ui.py  (+9 more)
tests/: conftest.py  test_api.py  test_utils.py  test_web_ui.py
ui/: .dockerignore  .env.development  .env.production  .prettierrc  Dockerfile  Procfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+242 files in other folders)
