[tool.poetry]
name = "PromptSail"
version = "0.1.0"
description = "Prompt Sail - prompt management and monitoring tool"
authors = ["Przemysław Górecki <przemyslaw.gorecki@gmail.com>, Krzysztof Sopyła <krzysztof.sopyla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["stable"], version = "^0.23.2"}
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
pymongo = "^4.5.0"
pydantic-settings = "^2.0.3"
gunicorn = "^21.2.0"
brotli = "^1.1.0"
pandas = "^2.2.1"
lato = "^0.8.0"
python-slugify = "^8.0.4"
fastapi = "^0.110.1"
pyzmq = "~25"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"



[tool.poetry.group.dev]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
requests-mock = "^1.11.0"
locust = "^2.24.1"


[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
ipykernel = "^6.25.2"
langchain = "^0.0"
openai = "^1"
tiktoken = "^0.5.2"
boto3 = "^1.34.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
