[tool.poetry]
name = "PromptSail-backend"
version = "0.5.4"
description = "Prompt Sail - LLM governance, monitoring and analysis system"
authors = ["Przemysław Górecki <przemyslaw.gorecki@gmail.com>, Krzysztof Sopyła <krzysztof.sopyla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["stable"], version = "^0.23.2"}
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
pymongo = "^4.5.0"
pydantic-settings = "^2.0.3"
gunicorn = "^22.0.0"
brotli = "^1.1.0"
pandas = "^2.2.1"
lato = "^0.11.0"
python-slugify = "^8.0.4"
fastapi = "^0.110.1"
pyzmq = "~25"
tiktoken = "^0.5.2"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
pillow = "^10.3.0"



[tool.poetry.group.dev]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
requests-mock = "^1.11.0"
locust = "^2.24.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
