[tool.poetry]
name = "PromptSail Examples"
version = "0.1.0"
description = "A collection of packages required for the Prompt Sail project proxy use examples to work correctly."
authors = ["Krzysztof Sopyła <krzysztof.sopyla@gmail.com>"]

[tool.poetry.dependencies]
ipykernel = "^6.25.2"
langchain = "^0.0"
openai = "^1"
boto3 = "^1.34.13"
anthropic = "^0.25.6"
rich = "^13.7.1"
langchain-anthropic = "^0.1.11"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"