[tool.poetry]
name = "PromptSail Examples"
version = "0.1.0"
description = "A collection of packages required for the Prompt Sail project proxy use examples to work correctly."
authors = ["Krzysztof Sopyła <krzysztof.sopyla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.2"
langchain = "^0"
openai = "^1"
boto3 = "^1.34.13"
anthropic = "^0.25.6"
rich = "^13.7.1"
langchain-anthropic = "^0.1"
pillow = "^10.3.0"
langchain-huggingface = "^0.0"
langchain-community = "^0.2.6"
groq = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"